# tgit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml
app/: CMakeLists.txt
app/tgit/: CMakeLists.txt
app/tgit/resources/: images.qrc
app/tgit/src/: CodeViewer.cpp  CodeViewer.hpp  CommitDetailsWidget.cpp  CommitDetailsWidget.hpp  CommitDetailsWidget.ui  CommitDiffModel.cpp  CommitDiffModel.hpp  CommitView.cpp  CommitView.hpp  DiffView.cpp  DiffView.hpp  FileDiffWidget.cpp  FileDiffWidget.hpp  FileDiffWidget.ui  GitLogModel.cpp  GitLogModel.hpp  GitUtils.hpp  GraphBuilder.cpp  GraphBuilder.hpp  GraphItemDelegate.cpp  GraphItemDelegate.hpp  GraphRow.hpp  History.cpp  History.hpp  HistoryModelAdaptor.cpp  HistoryModelAdaptor.hpp  Reference.hpp  ReferenceDatabase.cpp  ReferenceDatabase.hpp  ReferenceItemDelegate.cpp  ReferenceItemDelegate.hpp  ReferencesModel.cpp  ReferencesModel.hpp  TGitApplication.cpp  TGitApplication.hpp  TGitMainWindow.cpp  TGitMainWindow.hpp  TGitMainWindow.ui  main.cpp
cmake/: CPackProjectConfigInnoSetup.cmake.in  Dependencies.cmake  Findlibgit2.cmake  InnoSetupPackaging.cmake  Options.cmake  Platform.cmake  TGitSetup.iss.in  tgitSupport.cmake
lib/: CMakeLists.txt
lib/gitpp/: CMakeLists.txt
lib/gitpp/include/gitpp/: Blob.hpp  Commit.hpp  Context.hpp  Delta.hpp  Diff.hpp  ObjectId.hpp  Reference.hpp  Repository.hpp  RevisionWalker.hpp  Tree.hpp
lib/gitpp/src/: Blob.cpp  Commit.cpp  Context.cpp  Delta.cpp  Diff.cpp  ObjectId.cpp  Reference.cpp  Repository.cpp  RevisionWalker.cpp  Tree.cpp
lib/stx/: CMakeLists.txt
lib/stx/include/stx/: overload.hpp
lib/stx/include/stx/algorithm/: contains.hpp  find.hpp  index_of.hpp
lib/stx/include/stx/type_traits/: compare.hpp
lib/stx/include/stx/utility/: macros.hpp
